--- a/src/Blanquita.Web/Components/_Imports.razor
+++ b/src/Blanquita.Web/Components/_Imports.razor
@@ -11,6 +11,8 @@
 @using Blanquita.Web.Services
 @using Blanquita.Web.Components
 @using Blanquita.Web.Components.Layout
+@using Blanquita.Web.Components.Dialogs
+@using Blanquita.Web.Components.Shared
 
 @* Clean Architecture Namespaces *@
 @using Blanquita.Application.Interfaces
